# cli

./: .env.local  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  apko.yaml  compose.yaml  dist-workspace.toml
.github/workflows/: docker-release.yml  release.yaml  release.yml
src/: main.rs
src/commands/: auth.rs  deploy.rs  docker.rs  environments.rs  mod.rs  projects.rs  services.rs  teams.rs
src/models/: auth.rs  mod.rs  options.rs  pyrite_json.rs  pyrite_toml.rs  vars.rs
src/services/: mod.rs
src/services/auth/: mod.rs
src/services/deploy/: mod.rs
src/services/projects/: mod.rs
src/services/service_environments/: mod.rs
src/services/services/: mod.rs
src/services/teams/: mod.rs
src/services/utils/: mod.rs
src/templates/: dart.rs  mod.rs
src/utils/: handlebars.rs  mod.rs
