[package]
name = "pyrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
cliclack = { version = "0.3.5" }
console = "0.15.10"
handlebars = "6.3.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
supabase-auth = "0.10.10"
tonic = { version = "0.12.3" }
rust_dotenv = "0.1.2"
base64 = "0.22.1"
pyrite-client-rs = { path = "../client-rs" }
comfy-table = "7.1.3"
chrono = "0.4.39"
pbjson-types = "0.7.0"
