[package]
name = "pyrite"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
cliclack = { version = "0.3.8" }
console = "0.15.11"
handlebars = "6.4.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
supabase-auth = "0.10.14"
tonic = { version = "0.14.3" }
rust_dotenv = "0.1.3"
base64 = "0.22.1"
pyrite-client-rs = { path = "../client-rs" }
comfy-table = { version = "7.2.2", features = ["custom_styling"] }
chrono = "0.4.43"
pbjson-types = "0.9.0"
axum = "0.8.8"
axum-server = "0.8.0"
oauth2 = "5.0.0"
toml = "0.9.11"
