[package]
name = "pyrite"
version = "0.1.2"
edition = "2024"
authors = ["Ayush Chothe <cto@pyrite.cloud>"]

description = "Pyrite Cloud CLI"
homepage = "https://github.com/PyriteCloud/cli"
repository = "https://github.com/PyriteCloud/cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
cliclack = { version = "0.4.0" }
console = "0.16.2"
handlebars = "6.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
supabase-auth = "0.10.14"
tonic = { version = "0.14.5", features = ["tls-ring", "tls-native-roots"] }
rust_dotenv = "0.1.3"
base64 = "0.22.1"
pyrite-client-rs = { path = "./client-rs" }
comfy-table = { version = "7.2.2", features = ["custom_styling"] }
chrono = "0.4.44"
pbjson-types = "0.9.0"
axum = "0.8.8"
axum-server = "0.8.0"
oauth2 = "5.0.0"
toml = "0.9.11"
dirs = "6.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
